deploy: 4904f19d364236314ca525f4f05a3d459df93384

--- a/index.html
+++ b/index.html
@@ -390,30 +390,20 @@ Upon completing my PhD in 1995, I was a postdoctoral computer scientist at Argon
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/gkt-hugo/publication/dblp-confphoenix-laufer-o-91/cite.bib>Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-1-4471-3794-8_10 target=_blank rel=noopener>DOI</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-1-4471-3794-8_10 target=_blank rel=noopener>URL</a></p></div></div></div></div></section><section id=contact class="home-section wg-contact"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Contact</h1></div><div class="col-12 col-lg-8"><ul class=fa-ul><li><i class="fa-li fas fa-envelope fa-2x" aria-hidden=true></i>
-<span id=person-email><a href=mailto:laufer@cs.luc.edu>laufer@cs.luc.edu</a></span></li><li><i class="fa-li fas fa-phone fa-2x" aria-hidden=true></i>
-<span id=person-telephone><a href=tel:+1%20773%20508-3583>+1 773 508-3583</a></span></li><li><i class="fa-li fas fa-map-marker fa-2x" aria-hidden=true></i>
+<span id=person-email><a href=mailto:gktcs.luc.edu>gktcs.luc.edu</a></span></li><li><i class="fa-li fas fa-phone fa-2x" aria-hidden=true></i>
+<span id=person-telephone><a href=tel:+1.773.508.8931>+1.773.508.8931</a></span></li><li><i class="fa-li fas fa-map-marker fa-2x" aria-hidden=true></i>
 <span id=person-address>1032 W Sheridan Rd, Chicago, IL 60660-1537</span></li><li><i class="fa-li fas fa-compass fa-2x" aria-hidden=true></i>
-<span>Enter Doyle Hall (1052 W Loyola Ave) and take the stairs to room 202 on the second floor</span></li><li><i class="fa-li fas fa-clock fa-2x" aria-hidden=true></i>
+<span>Enter Doyle Hall (1052 W Loyola Ave) and take the stairs to room 301 on the third floor</span></li><li><i class="fa-li fas fa-clock fa-2x" aria-hidden=true></i>
 <span>by appointment (via Calendly)</span></li><li><i class="fa-li fas fa-calendar-check fa-2x" aria-hidden=true></i>
-<a href=https://calendly.com/laufer target=_blank rel=noopener>Book an appointment</a></li><li><i class="fa-li ai ai-acmdl fa-2x" aria-hidden=true></i>
-<a href="http://dl.acm.org/author_page.cfm?id=81100009927" target=_blank rel=noopener>ACM Digital Library</a></li><li><i class="fa-li ai ai-arxiv fa-2x" aria-hidden=true></i>
-<a href="https://arxiv.org/search/?searchtype=author&query=L%C3%A4ufer%2C+K" target=_blank rel=noopener>arXiv</a></li><li><i class="fa-li ai ai-open-materials fa-2x" aria-hidden=true></i>
-<a href=https://works.bepress.com/laufer target=_blank rel=noopener>BEPress SelectedWorks</a></li><li><i class="fa-li fas fa-calendar fa-2x" aria-hidden=true></i>
-<a href="https://www.google.com/calendar/embed?src=2scpdmk18r3sr28ibob72je1ho%40group.calendar.google.com&ctz=America/Chicago" target=_blank rel=noopener>Google Calendar</a></li><li><i class="fa-li ai ai-cv fa-2x" aria-hidden=true></i>
-<a href=https://github.com/klaeufer/cv/releases/latest/download/laufer-cv.pdf target=_blank rel=noopener>Download CV [PDF]</a></li><li><i class="fa-li ai ai-dblp fa-2x" aria-hidden=true></i>
-<a href="http://www.informatik.uni-trier.de/~ley/db/indices/a-tree/l/L=auml=ufer:Konstantin.html" target=_blank rel=noopener>DBLP</a></li><li><i class="fa-li fab fa-github fa-2x" aria-hidden=true></i>
-<a href=https://github.com/klaeufer target=_blank rel=noopener>GitHub</a></li><li><i class="fa-li fas fa-graduation-cap fa-2x" aria-hidden=true></i>
-<a href="http://scholar.google.com/citations?user=Rs0f_nMAAAAJ" target=_blank rel=noopener>Google Scholar</a></li><li><i class="fa-li fab fa-instagram fa-2x" aria-hidden=true></i>
-<a href=https://www.instagram.com/klaeufer target=_blank rel=noopener>Instagram</a></li><li><i class="fa-li fab fa-linkedin fa-2x" aria-hidden=true></i>
-<a href=http://www.linkedin.com/in/laufer target=_blank rel=noopener>LinkedIn</a></li><li><i class="fa-li fas fa-dna fa-2x" aria-hidden=true></i>
-<a href="https://www.mathgenealogy.org/id.php?id=151113" target=_blank rel=noopener>Mathematics Genealogy Project</a></li><li><i class="fa-li fab fa-meetup fa-2x" aria-hidden=true></i>
-<a href="https://www.meetup.com/members/6740341/?showAllGroups=true" target=_blank rel=noopener>Meetup</a></li><li><i class="fa-li ai ai-orcid fa-2x" aria-hidden=true></i>
-<a href=https://orcid.org/0000-0002-7548-0876 target=_blank rel=noopener>ORCID</a></li><li><i class="fa-li fas fa-star fa-2x" aria-hidden=true></i>
-<a href="https://www.ratemyprofessors.com/ShowRatings.jsp?tid=287274" target=_blank rel=noopener>RateMyProfessor</a></li><li><i class="fa-li fas fa-user-group fa-2x" aria-hidden=true></i>
-<a href=https://www.stayfriends.de/client/profile/339427 target=_blank rel=noopener>StayFriends</a></li><li><i class="fa-li fab fa-twitter fa-2x" aria-hidden=true></i>
-<a href=https://twitter.com/klaeufer target=_blank rel=noopener>Twitter</a></li><li><i class="fa-li fab fa-xing fa-2x" aria-hidden=true></i>
-<a href=http://www.xing.com/profile/Konstantin_Laeufer target=_blank rel=noopener>Xing</a></li><li><i class="fa-li fab fa-youtube fa-2x" aria-hidden=true></i>
-<a href=http://www.youtube.com/user/klaeufer target=_blank rel=noopener>YouTube</a></li></ul></div></div></div></section></div><div class=page-footer><div class=container><footer class=site-footer><p class="powered-by copyright-license-text">© 2022 Me. This work is licensed under <a href=https://creativecommons.org/licenses/by-nc-nd/4.0 rel="noopener noreferrer" target=_blank>CC BY NC ND 4.0</a></p><p class="powered-by footer-license-icons"><a href=https://creativecommons.org/licenses/by-nc-nd/4.0 rel="noopener noreferrer" target=_blank aria-label="Creative Commons"><i class="fab fa-creative-commons fa-2x" aria-hidden=true></i>
+<a href=https://calendly.com/laufer target=_blank rel=noopener>Book an appointment</a></li><li><i class="fa-li ai ai-arxiv fa-2x" aria-hidden=true></i>
+<a href="https://arxiv.org/search/?searchtype=author&query=Thiruvathukal+G+K" target=_blank rel=noopener>arXiv</a></li><li><i class="fa-li ai ai-open-materials fa-2x" aria-hidden=true></i>
+<a href=https://works.bepress.com/gkthiruvathukal target=_blank rel=noopener>BEPress SelectedWorks</a></li><li><i class="fa-li fas fa-calendar fa-2x" aria-hidden=true></i>
+<a href=https://calendly.com/gkthiruvathukal target=_blank rel=noopener>Google Calendar</a></li><li><i class="fa-li ai ai-cv fa-2x" aria-hidden=true></i>
+<a href=https://github.com/gkthiruvathukal/cv/releases/latest/download/laufer-cv.pdf target=_blank rel=noopener>Download CV [PDF]</a></li><li><i class="fa-li fab fa-github fa-2x" aria-hidden=true></i>
+<a href=https://github.com/gkthiruvathukal target=_blank rel=noopener>GitHub</a></li><li><i class="fa-li fas fa-graduation-cap fa-2x" aria-hidden=true></i>
+<a href="https://scholar.google.com/citations?user=Ls7yS0IAAAAJ" target=_blank rel=noopener>Google Scholar</a></li><li><i class="fa-li fab fa-linkedin fa-2x" aria-hidden=true></i>
+<a href=http://www.linkedin.com/in/gkthiruvathukal target=_blank rel=noopener>LinkedIn</a></li><li><i class="fa-li ai ai-orcid fa-2x" aria-hidden=true></i>
+<a href=https://orcid.org/0000-0002-0452-5571 target=_blank rel=noopener>ORCID</a></li></ul></div></div></div></section></div><div class=page-footer><div class=container><footer class=site-footer><p class="powered-by copyright-license-text">© 2022 Me. This work is licensed under <a href=https://creativecommons.org/licenses/by-nc-nd/4.0 rel="noopener noreferrer" target=_blank>CC BY NC ND 4.0</a></p><p class="powered-by footer-license-icons"><a href=https://creativecommons.org/licenses/by-nc-nd/4.0 rel="noopener noreferrer" target=_blank aria-label="Creative Commons"><i class="fab fa-creative-commons fa-2x" aria-hidden=true></i>
 <i class="fab fa-creative-commons-by fa-2x" aria-hidden=true></i>
 <i class="fab fa-creative-commons-nc fa-2x" aria-hidden=true></i>
 <i class="fab fa-creative-commons-nd fa-2x" aria-hidden=true></i></a></p><p class=powered-by>Published with <a href="https://wowchemy.com/?utm_campaign=poweredby" target=_blank rel=noopener>Wowchemy</a> — the free, <a href=https://github.com/wowchemy/wowchemy-hugo-themes target=_blank rel=noopener>open source</a> website builder that empowers creators.</p></footer></div></div><script src=/gkt-hugo/js/vendor-bundle.min.d26509351aa0ff874abbee824e982e9b.js></script>
