--- a/index.html
+++ b/index.html
@@ -698,12 +698,12 @@ Upon completing my PhD in 1995, I was a postdoctoral computer scientist at Argon
 <span id=person-telephone><a href=tel:+1.773.508.8931>+1.773.508.8931</a></span></li><li><i class="fa-li fas fa-map-marker fa-2x" aria-hidden=true></i>
 <span id=person-address>1032 W Sheridan Rd, Chicago, IL 60660-1537</span></li><li><i class="fa-li fas fa-compass fa-2x" aria-hidden=true></i>
 <span>Enter Doyle Hall (1052 W Loyola Ave) and take the stairs to room 301 on the third floor</span></li><li><i class="fa-li fas fa-clock fa-2x" aria-hidden=true></i>
-<span>by appointment (via Calendly)</span></li><li><i class="fa-li fas fa-calendar-check fa-2x" aria-hidden=true></i>
-<a href=https://calendly.com/laufer target=_blank rel=noopener>Book an appointment</a></li><li><i class="fa-li ai ai-arxiv fa-2x" aria-hidden=true></i>
+<span>by appointment only (book an appointment below)</span></li><li><i class="fa-li fas fa-calendar-check fa-2x" aria-hidden=true></i>
+<a href=https://calendly.com/gkthiruvathukal target=_blank rel=noopener>Book an appointment</a></li><li><i class="fa-li ai ai-arxiv fa-2x" aria-hidden=true></i>
 <a href="https://arxiv.org/search/?searchtype=author&query=Thiruvathukal+G+K" target=_blank rel=noopener>arXiv</a></li><li><i class="fa-li ai ai-open-materials fa-2x" aria-hidden=true></i>
 <a href=https://works.bepress.com/gkthiruvathukal target=_blank rel=noopener>BEPress SelectedWorks</a></li><li><i class="fa-li fas fa-calendar fa-2x" aria-hidden=true></i>
 <a href=https://calendly.com/gkthiruvathukal target=_blank rel=noopener>Google Calendar</a></li><li><i class="fa-li ai ai-cv fa-2x" aria-hidden=true></i>
-<a href=https://github.com/gkthiruvathukal/cv/releases/latest/download/laufer-cv.pdf target=_blank rel=noopener>Download CV [PDF]</a></li><li><i class="fa-li fab fa-github fa-2x" aria-hidden=true></i>
+<a href=https://github.com/gkthiruvathukal/cv/releases/latest/download/gkthiruvathukal-cv.pdf target=_blank rel=noopener>Download CV [PDF]</a></li><li><i class="fa-li fab fa-github fa-2x" aria-hidden=true></i>
 <a href=https://github.com/gkthiruvathukal target=_blank rel=noopener>GitHub</a></li><li><i class="fa-li fas fa-graduation-cap fa-2x" aria-hidden=true></i>
 <a href="https://scholar.google.com/citations?user=Ls7yS0IAAAAJ" target=_blank rel=noopener>Google Scholar</a></li><li><i class="fa-li fab fa-linkedin fa-2x" aria-hidden=true></i>
 <a href=http://www.linkedin.com/in/gkthiruvathukal target=_blank rel=noopener>LinkedIn</a></li><li><i class="fa-li ai ai-orcid fa-2x" aria-hidden=true></i>
