deploy: ca88af4552803fc718379b91099511b18ad95944

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@ Upon completing my PhD in 1995, I was a postdoctoral computer scientist at Argon
 <span id=person-email><a href=mailto:gktcs.luc.edu>gktcs.luc.edu</a></span></li><li><i class="fa-li fas fa-phone fa-2x" aria-hidden=true></i>
 <span id=person-telephone><a href=tel:+1.773.508.8931>+1.773.508.8931</a></span></li><li><i class="fa-li fas fa-map-marker fa-2x" aria-hidden=true></i>
 <span id=person-address>1032 W Sheridan Rd, Chicago, IL 60660-1537</span></li><li><i class="fa-li fas fa-compass fa-2x" aria-hidden=true></i>
-<span>Enter Doyle Hall (1052 W Loyola Ave) and take the stairs to room 301 on the third floor</span></li><li><i class="fa-li fas fa-clock fa-2x" aria-hidden=true></i>
+<span>Enter Doyle Hall on 1052 W Loyola Ave and take the stairs to room 301 on the third floor</span></li><li><i class="fa-li fas fa-clock fa-2x" aria-hidden=true></i>
 <span>by appointment only (book an appointment below)</span></li><li><i class="fa-li fas fa-calendar-check fa-2x" aria-hidden=true></i>
 <a href=https://calendly.com/gkthiruvathukal target=_blank rel=noopener>Book an appointment</a></li><li><i class="fa-li ai ai-arxiv fa-2x" aria-hidden=true></i>
 <a href="https://arxiv.org/search/?searchtype=author&query=Thiruvathukal+G+K" target=_blank rel=noopener>arXiv</a></li><li><i class="fa-li ai ai-open-materials fa-2x" aria-hidden=true></i>
