deploy: 7f71506aa25d270296f54d54bae46f68c9d8b6a4

--- a/index.html
+++ b/index.html
@@ -44,11 +44,23 @@ Cyber Infrastructure to Enable Computer Vision Applications at the Edge Using Au
 <em>Proceedings of the 23rd Annual International Workshop on Mobile Computing Systems and Applications</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/10-1145-3508396-3517075/cite.bib>Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3508396.3517075 target=_blank rel=noopener>DOI</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3508396.3517075 target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>Caleb Tung</span>, <span>Abhinav Goel</span>, <span>Xiao Hu</span>, <span>Nick Eliopoulos</span>, <span>Emmanuel S. Amobi</span>, <span>George K. Thiruvathukal</span>, <span>Vipin Chaudhary</span>, <span>Yung-Hsiang Lu</span></span>
+(2022).
+<a href=/publication/9870012/>Irrelevant Pixels are Everywhere: Find and Exclude Them for More Efficient Computer Vision</a>.
+<em>2022 IEEE 4th International Conference on Artificial Intelligence Circuits and Systems (AICAS)</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/9870012/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1109/AICAS54282.2022.9870012 target=_blank rel=noopener>DOI</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ecommons.luc.edu/cs_facpubs/293/ target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>George K. Thiruvathukal</span>, <span>Yung-Hsiang Lu</span>, <span>Jaeyoun Kim</span>, <span>Yiran Chen</span>, <span>Bo Chen</span></span>
 (2022).
 <a href=/publication/crc-lpcv-2022/>Low-Power Computer Vision: Improve the Efficiency of Artificial Intelligence</a>.
 <em>Chapman and Hall/CRC Press</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/crc-lpcv-2022/cite.bib>Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ecommons.luc.edu/cs_facpubs/281/ target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>Abhinav Goel</span>, <span>Caleb Tung</span>, <span>Nick Eliopoulos</span>, <span>Amy Wang</span>, <span>James C. Davis</span>, <span>George K. Thiruvathukal</span>, <span>Yung-Hsiang Lu</span></span>
+(2022).
+<a href=/publication/9935301/>Tree-based Unidirectional Neural Networks for Low-Power Computer Vision</a>.
+<em>IEEE Design and Test</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/9935301/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1109/MDAT.2022.3217016 target=_blank rel=noopener>DOI</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ecommons.luc.edu/cs_facpubs/317/ target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Caleb Tung</span>, <span>Abhinav Goel</span>, <span>Fischer Bordwell</span>, <span>Nick John Eliopoulos</span>, <span>Xiao Hu</span>, <span>George K Thiruvathukal</span>, <span>Yung-Hsiang Lu</span></span>
 (2022).
 <a href=/publication/9778276/>Why Accuracy Is Not Enough: The Need for Consistency in Object Detection</a>.
