--- a/index.html
+++ b/index.html
@@ -714,8 +714,7 @@ Research</em>, $15,000, 2009</li><li>Microsoft, PI, <em>In-kind equipment donati
 <span>by appointment only (book an appointment below)</span></li><li><i class="fa-li fas fa-calendar-check fa-2x" aria-hidden=true></i>
 <a href=https://calendly.com/gkthiruvathukal target=_blank rel=noopener>Book an appointment</a></li><li><i class="fa-li ai ai-arxiv fa-2x" aria-hidden=true></i>
 <a href="https://arxiv.org/search/?searchtype=author&query=Thiruvathukal+G+K" target=_blank rel=noopener>arXiv</a></li><li><i class="fa-li ai ai-open-materials fa-2x" aria-hidden=true></i>
-<a href=https://works.bepress.com/gkthiruvathukal target=_blank rel=noopener>BEPress SelectedWorks</a></li><li><i class="fa-li fas fa-calendar fa-2x" aria-hidden=true></i>
-<a href=https://calendly.com/gkthiruvathukal target=_blank rel=noopener>Google Calendar</a></li><li><i class="fa-li ai ai-cv fa-2x" aria-hidden=true></i>
+<a href=https://works.bepress.com/gkthiruvathukal target=_blank rel=noopener>BEPress SelectedWorks</a></li><li><i class="fa-li ai ai-cv fa-2x" aria-hidden=true></i>
 <a href=https://github.com/gkthiruvathukal/cv/releases/latest/download/gkthiruvathukal-cv.pdf target=_blank rel=noopener>Download CV [PDF]</a></li><li><i class="fa-li fab fa-github fa-2x" aria-hidden=true></i>
 <a href=https://github.com/gkthiruvathukal target=_blank rel=noopener>GitHub</a></li><li><i class="fa-li fas fa-graduation-cap fa-2x" aria-hidden=true></i>
 <a href="https://scholar.google.com/citations?user=Ls7yS0IAAAAJ" target=_blank rel=noopener>Google Scholar</a></li><li><i class="fa-li fab fa-linkedin fa-2x" aria-hidden=true></i>
