deploy: 98d66f288766bc01207516fa29fbd21a55e2427c

--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@ Cyber Infrastructure to Enable Computer Vision Applications at the Edge Using Au
 Senior Personnel, <em>Leveraging New Data Sources to Analyze the Risk of COVID-19 in Crowded Locations</em>, $58,000.</li><li><a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1445347" target=_blank rel=noopener>NSF OAC-1445347</a>, PI, <em>EAGER: Collaborative Research: Making Software Engineering Work for Computational Science and Engineering: An Integrated Approach</em>, $109,598, 2014-2018</li><li><a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=0444197" target=_blank rel=noopener>NSF CCF-0444197</a>, PI, <em>Collaborative Proposal: Ultra-Scalable System Software and Tools for Data-Intensive Computing</em>, $72,433, 2004-2007</li><li><a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=0205652" target=_blank rel=noopener>NSF CNS-0205652</a>, PI, <em>ITR: The Community Information Technology Entrepreneurship Project</em>, $1,034,500, 2002-2006</li><li><a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1042337" target=_blank rel=noopener>NSF CNS-1042337</a>, PI, <em>Collaborative Research: BPC-LSA: ACM SIGBP: Forming an ACM Special Interest Group to Scale the Impact of BPC Activities</em>, $38,782, 2010-2014</li><li><a href="https://securegrants.neh.gov/publicquery/main.aspx?f=1&amp;gn=HD-50782-09" target=_blank rel=noopener>NEH HD-50782-09</a>, co-PI, <em>Humanities Research Infrastructure and Tools (HRIT): An Environment for Collaborative Textual Scholarship</em>, $50,000, 2009-2010</li><li><a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=0837769" target=_blank rel=noopener>NSF CNS-0837769</a>, Co-PI, <em>Improving Metropolitan Participation to Accelerate Computing Throughput and Success (IMPACTS)</em>, $141,711, 2008-2009</li><li><a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=0552888" target=_blank rel=noopener>NSF DBI-0552888</a>, Co-PI, <em>REU Site: Integrated Cross-Disciplinary Summer Program in Bioinformatics</em>, $292,412, 2006-2010</li><li><a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=0228926" target=_blank rel=noopener>NSF OAC-0228926</a>, Co-PI, <em>HPNC: HPNC for Science Research at Loyola University Chicago</em>, $150,000, 2002-2005</li><li>DARPA SBIR Phase I, PI, <em>Ad Hoc Human Interaction Networks for Asymmetric Threat Surveillance</em>, $100,000, 2002</li><li>DARPA SBIR Phase I, Co-PI, <em>Cluster Based Repositories and Analysis</em>, $100,000, 2003</li></ul><h3 id=corporate>Corporate</h3><ul><li>Intel, PI, <em>Expanding OS + DS lectures to include oneAPI/DPC++</em>, $$40,000, 2022</li><li>Google, PI, <em>TensorFlow Models Garden Software Engineering</em>, $30,000, 2021</li><li>Facebook, PI, <em>Low-Power Computer Vision Competition</em>, $30,000, 2021</li><li>Google, Co-PI, <em>Google Research Awards: Machine Perception</em>, $75,000, 2017</li><li>4C Insights, PI, <em>Unrestricted gift to supportt systems research at
 Loyola</em>, $10,000, 2017</li><li>Typesafe, Co-PI, <em>Unrestricted gift to support languages/systems research at Loyola</em>, $5,000, 2015</li><li>Microsoft, PI, <em>Unrestricted gift to support HPC and Bioinformatics
 Research</em>, $15,000, 2009</li><li>Microsoft, PI, <em>In-kind equipment donation of computational cluster (80 nodes)</em>, $100,000, 2009</li><li>HP, Co-PI, <em>Learning the Wonders of Computing with Wireless Collaboration</em>, $68,000, 2007</li><li>Hostway Corporation, PI, <em>Unrestricted gift to support creation of open source laboratory</em>, $30,000, 2007}</li></ul><span class="d-none default-project-filter">*</span><div class="isotope projects-container row js-layout-row"></div></div></div></div></section><section id=publications class="home-section wg-pages"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Publications</h1></div><div class="col-12 col-lg-8"><div class="alert alert-note"><div>Quickly discover relevant content by <a href=./publication/>filtering publications</a>.</div></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"></span>(2023).
+<a href=/publication/gkt-hivdb/>Gkt Hivdb</a>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/gkt-hivdb/cite.bib>Cite</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>Shane Allcroft</span>, <span>Mohammed Metwaly</span>, <span>Zachery Berg</span>, <span>Isha Ghodgaonkar</span>, <span>Fischer Bordwell</span>, <span>Xinxin Zhao</span>, <span>Xinglei Liu</span>, <span>Jiahao Xu</span>, <span>Subhankar Chakraborty</span>, <span>Vishnu Banna</span>, <span>Akhil Chinnakotla</span>, <span>Abhinav Goel</span>, <span>Caleb Tung</span>, <span>Gore Kao</span>, <span>Wei Zakharov</span>, <span>David A. Shoham</span>, <span>George K. Thiruvathukal</span>, <span>Yung-Hsiang Lu</span></span>
+(2023).
+<a href=/publication/10058769/>Observing Human Mobility Internationally During COVID-19</a>.
+<em>Computer</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/10058769/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1109/MC.2022.3175751 target=_blank rel=noopener>DOI</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>Wenxin Jiang</span>, <span>Nicholas Synovic</span>, <span>Rohan Sethi</span>, <span>Aryan Indarapu</span>, <span>Matt Hyatt</span>, <span>Taylor R. Schorlemmer</span>, <span>George K. Thiruvathukal</span>, <span>James C. Davis</span></span>
+(2022).
+<a href=/publication/10-1145-3560835-3564547/>An Empirical Study of Artifacts and Security Risks in the Pre-Trained Model Supply Chain</a>.
+<em>Proceedings of the 2022 ACM Workshop on Software Supply Chain Offensive Research and Ecosystem Defenses</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/10-1145-3560835-3564547/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3560835.3564547 target=_blank rel=noopener>DOI</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3560835.3564547 target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Yucheng Yang</span>, <span>Jack West</span>, <span>George K. Thiruvathukal</span>, <span>Neil Klingensmith</span>, <span>Kassem Fawaz</span></span>
 (2022).
 <a href=/publication/arxiv-2204-06128/>Are You Really Muted?: A Privacy Analysis of Mute Buttons in Video Conferencing Apps</a>.
@@ -345,6 +358,12 @@ Research</em>, $15,000, 2009</li><li>Microsoft, PI, <em>In-kind equipment donati
 <a href=/publication/tiffany-barnes-need-2016/>The Need for Research in Broadening Participation</a>.
 <em>Communications of the ACM</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/tiffany-barnes-need-2016/cite.bib>Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ecommons.luc.edu/cs_facpubs/129/ target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>Catherine Putonti</span>, <span>George K. Thiruvathukal</span></span>
+(2015).
+<a href=/publication/catherine-putonti-organised-2015/>Organised Genomic HIV and Pseudomonas Sequence Data</a>.
+<em>Figshare</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/catherine-putonti-organised-2015/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.6084/m9.figshare.1564844.v3 target=_blank rel=noopener>DOI</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://figshare.com/articles/dataset/hivdb/1564844 target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>William Honig</span>, <span>Konstantin Läufer</span>, <span>George K. Thiruvathukal</span></span>
 (2015).
 <a href=/publication/wl-honig-framework-2015/>A Framework Architecture for Student Learning in Distributed Embedded Systems</a>.
@@ -358,6 +377,9 @@ Research</em>, $15,000, 2009</li><li>Microsoft, PI, <em>In-kind equipment donati
 <a href=/publication/george-k-thiruvathukal-cloudy-2015/>Cloudy with a Chance of Sunshine, or the Future of Magazine Publishing (Article, 2015) [WorldCat.Org]</a>.
 <em>Computing in Science and Engineering</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/george-k-thiruvathukal-cloudy-2015/cite.bib>Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ecommons.luc.edu/cs_facpubs/124/ target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>George K. Thiruvathukal</span></span>
+(2015).
+<a href=/publication/george-k-thiruvathukal-gcasr-2015/>GCASR 15: Middleware for Collaborative Distributed/Mobile Applications: XMPP or Reactive HTTP?</a>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/george-k-thiruvathukal-gcasr-2015/cite.bib>Cite</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Tiffany Barnes</span>, <span>George K. Thiruvathukal</span>, <span>Kristy Elizabeth Boyer</span>, <span>Jeff Forbes</span>, <span>Jamie Payton</span></span>
 (2015).
 <a href=/publication/tiffany-barnes-proceedings-2015/>Proceedings of 2015 Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT) RESPECT 2015</a>.
@@ -386,6 +408,11 @@ Research</em>, $15,000, 2009</li><li>Microsoft, PI, <em>In-kind equipment donati
 <a href=/publication/manish-parashar-extreme-2014/>Extreme Data [Guest Editors' Introduction]</a>.
 <em>Computing in Science and Engineering</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/manish-parashar-extreme-2014/cite.bib>Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ecommons.luc.edu/cs_facpubs/131/ target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>Mark Lewis</span>, <span>Konstantin Läufer</span>, <span>George K. Thiruvathukal</span></span>
+(2014).
+<a href=/publication/mark-lewis-scala-2014/>Scala for Introductory CS and Parallelism (Workshop)</a>.
+<em>45th ACM technical symposium / Computer science education (SIGCSE &lsquo;14)</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/mark-lewis-scala-2014/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://scalaworkshop.cs.luc.edu target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Trevor Borg</span>, <span>George K. Thiruvathukal</span></span>
 (2014).
 <a href=/publication/dh-2014-borg-thiruvathukal/>Single Page Apps for Humanists: A Case Study Using the Perseus Richmond Times Corpus</a>.
@@ -396,6 +423,10 @@ Research</em>, $15,000, 2009</li><li>Microsoft, PI, <em>In-kind equipment donati
 <a href=/publication/george-k-thiruvathukal-what-2014/>What We Publish in CiSE</a>.
 <em>Computing in Science and Engineering</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/george-k-thiruvathukal-what-2014/cite.bib>Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ecommons.luc.edu/cs_facpubs/132/ target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>Thomas Delgado Dias</span>, <span>Xian Yan</span>, <span>Konstantin Läufer</span>, <span>George K. Thiruvathukal</span></span>
+(2013).
+<a href=/publication/gcasr-2013-tablets/>Building Capable, Energy-Efficient, Flexible Visualization and Sensing Clusters from Commodity Tablets</a>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/gcasr-2013-tablets/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ecommons.luc.edu/cs_facpubs/66/ target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>George K. Thiruvathukal</span>, <span>Manish Parashar</span></span>
 (2013).
 <a href=/publication/george-k-thiruvathukal-cloud-2013/>Cloud Computing [Guest Editors' Introduction]</a>.
@@ -406,6 +437,10 @@ Research</em>, $15,000, 2009</li><li>Microsoft, PI, <em>In-kind equipment donati
 <a href=/publication/george-k-thiruvathukal-computational-2013/>Computational Science, Demystified - the Future, Revealed and CiSE, 2013</a>.
 <em>Computing in Science and Engineering</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/george-k-thiruvathukal-computational-2013/cite.bib>Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ecommons.luc.edu/cs_facpubs/135/ target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>Paul Stasiuk</span>, <span>Konstantin Läufer</span>, <span>George K. Thiruvathukal</span></span>
+(2013).
+<a href=/publication/gcasr-2013-environmental-data/>Network Technologies Used to Aggregate Environmental Data</a>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/gcasr-2013-environmental-data/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ecommons.luc.edu/cs_facpubs/65/ target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>George K. Thiruvathukal</span></span>
 (2013).
 <a href=/publication/george-k-thiruvathukal-productivity-2013/>Productivity in the Cognitive Overload Era</a>.
@@ -416,6 +451,11 @@ Research</em>, $15,000, 2009</li><li>Microsoft, PI, <em>In-kind equipment donati
 <a href=/publication/jeffrey-carver-software-2013/>Software Engineering Need not be Difficult</a>.
 <em>WSSSPE 2013</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/jeffrey-carver-software-2013/cite.bib>Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ecommons.luc.edu/cs_facpubs/75 target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>Mark Lewis</span>, <span>Konstantin Läufer</span>, <span>George K. Thiruvathukal</span></span>
+(2013).
+<a href=/publication/mark-lewis-using-2013/>Using Scala strategically across the undergraduate curriculum (abstract only)</a>.
+<em>44th ACM technical symposium / Computer science education (SIGCSE &lsquo;13)</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/mark-lewis-using-2013/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ecommons.luc.edu/cs_facpubs/69/ target=_blank rel=noopener>URL</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>George K. Thiruvathukal</span></span>
 (2013).
 <a href=/publication/george-k-thiruvathukal-whats-2013/>What's in an Algorithm?</a>.
