--- a/index.html
+++ b/index.html
@@ -747,8 +747,8 @@ Research</em>, $15,000, 2009</li><li>Microsoft, PI, <em>In-kind equipment donati
 <span id=person-telephone><a href=tel:+1.773.508.8931>+1.773.508.8931</a></span></li><li><i class="fa-li fas fa-map-marker fa-2x" aria-hidden=true></i>
 <span id=person-address>1032 W Sheridan Rd, Chicago, IL 60660-1537</span></li><li><i class="fa-li fas fa-compass fa-2x" aria-hidden=true></i>
 <span>Enter Doyle Center on 1052 W Loyola Ave and GOTO 301</span></li><li><i class="fa-li fas fa-clock fa-2x" aria-hidden=true></i>
-<span>by Calendly appointment only</span></li><li><i class="fa-li fas fa-calendar-check fa-2x" aria-hidden=true></i>
-<a href=https://calendly.com/gkthiruvathukal target=_blank rel=noopener>Book an appointment</a></li><li><i class="fa-li ai ai-arxiv fa-2x" aria-hidden=true></i>
+<span>by Microsoft Bookings only</span></li><li><i class="fa-li fas fa-calendar-check fa-2x" aria-hidden=true></i>
+<a href=https://outlook.office365.com/owa/calendar/GeorgesBookingPage@loyolauniversitychicago.onmicrosoft.com/bookings/ target=_blank rel=noopener>Book an appointment</a></li><li><i class="fa-li ai ai-arxiv fa-2x" aria-hidden=true></i>
 <a href="https://arxiv.org/search/?searchtype=author&amp;query=Thiruvathukal+G+K" target=_blank rel=noopener>arXiv</a></li><li><i class="fa-li ai ai-open-materials fa-2x" aria-hidden=true></i>
 <a href=https://works.bepress.com/gkthiruvathukal target=_blank rel=noopener>BEPress SelectedWorks</a></li><li><i class="fa-li ai ai-cv fa-2x" aria-hidden=true></i>
 <a href=https://github.com/gkthiruvathukal/cv/releases/latest/download/gkthiruvathukal-cv.pdf target=_blank rel=noopener>Download CV [PDF]</a></li><li><i class="fa-li fab fa-github fa-2x" aria-hidden=true></i>
